--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     }
     h1 {
       text-align: center;
-      color: #4a90e2;
+      color: #6ba4e6;
     }
     form {
       background-color: #fff;
