--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
   </style>
 </head>
 <body>
-  <h1>Expense Tracker</h1>
+  <h1>Expense Tracker by Nishan</h1>
 
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
